--- a/model-login/build.gradle
+++ b/model-login/build.gradle
@@ -1,21 +1,17 @@
-apply plugin: 'com.android.application'
-//  组件化框架的插件
-apply plugin: 'app-joint'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
 
     defaultConfig {
-        applicationId "com.chaomeng.appjointdemo"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-
     //  测试库
     testImplementation deps.test.junit
     androidTestImplementation deps.test.runner
@@ -25,6 +21,5 @@ dependencies {
     implementation project(":lib-base")
     //  路由接口库
     implementation project(':router')
-    //  登录组件, 只在运行时加入
-    runtimeOnly project(":model-login")
+
 }
