--- a/standalone/model-login-run/build.gradle
+++ b/standalone/model-login-run/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.application'
-//  组件化框架的插件
-apply plugin: 'app-joint'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
 
     defaultConfig {
-        applicationId "com.chaomeng.appjointdemo"
+        applicationId "com.chaomeng.loginmodelrun"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -15,7 +13,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-
     //  测试库
     testImplementation deps.test.junit
     androidTestImplementation deps.test.runner
@@ -23,8 +20,6 @@ dependencies {
 
     //  公共基础库
     implementation project(":lib-base")
-    //  路由接口库
-    implementation project(':router')
-    //  登录组件, 只在运行时加入
-    runtimeOnly project(":model-login")
+    //  登录组件
+    implementation project(':model-login')
 }
