--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     implementation project(':router')
     //  登录组件, 只在运行时加入
     runtimeOnly project(":model-login")
+    //  '我的'组件, 只在运行时加入
+    runtimeOnly project(":model-mine")
 }
