--- a/model-login/src/main/AndroidManifest.xml
+++ b/model-login/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application>
         <activity
-            android:name=".ui.LoginActivity"
+            android:name=".ui.MainActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
     </application>
