--- a/standalone/model-login-run/src/main/AndroidManifest.xml
+++ b/standalone/model-login-run/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chaomeng.loginmodelrun">
+    package="com.chaomeng.login_model_run">
 
     <application
         android:name=".app.App"
