--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,12 @@
 apply plugin: 'com.android.application'
-//  组件化框架的插件
-apply plugin: 'app-joint'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
+//  Tinker依赖插件脚本
+apply from: 'tinker-support.gradle'
+
+//  组件化框架的插件
+apply plugin: 'app-joint'
 
 android {
 
@@ -11,10 +15,31 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    buildTypes {
+        release {
+            ndk {
+                abiFilters "armeabi", "armeabi-v7a", "arm64-v8a"
+            }
+        }
+        debug {
+            ndk {
+                abiFilters "armeabi", "armeabi-v7a", "x86"
+            }
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    //  多dex配置
+    implementation 'com.android.support:multidex:1.0.3'
+    //  使用热更新的bugly库
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.6'
+    // 指定tinker依赖版本（注：应用升级1.3.5版本起，不再内置tinker）
+    implementation 'com.tencent.tinker:tinker-android-lib:1.9.9'
+    //  其中latest.release指代最新版本号，也可以指定明确的版
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
 
     //  测试库
     testImplementation deps.test.junit
