--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,34 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            storeFile file("../cjr_code_key.jks")
+            storePassword 'qaz123'
+            keyAlias 'cjr_code_key'
+            keyPassword 'qaz123'
+        }
+        debug {
+            storeFile file("../cjr_code_key.jks")
+            storePassword 'qaz123'
+            keyAlias 'cjr_code_key'
+            keyPassword 'qaz123'
+        }
+    }
+
     buildTypes {
         release {
+            //  签名文件
+            signingConfig signingConfigs.release
+            //  ndk配置
             ndk {
                 abiFilters "armeabi", "armeabi-v7a", "arm64-v8a"
             }
         }
         debug {
+            //  签名文件
+            signingConfig signingConfigs.debug
+            //  ndk配置
             ndk {
                 abiFilters "armeabi", "armeabi-v7a", "x86"
             }
