--- a/standalone/model-login-run/build.gradle
+++ b/standalone/model-login-run/build.gradle
@@ -9,6 +9,32 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        release {
+            storeFile file("../../cjr_code_key.jks")
+            storePassword 'qaz123'
+            keyAlias 'cjr_code_key'
+            keyPassword 'qaz123'
+        }
+        debug {
+            storeFile file("../../cjr_code_key.jks")
+            storePassword 'qaz123'
+            keyAlias 'cjr_code_key'
+            keyPassword 'qaz123'
+        }
+    }
+
+    buildTypes {
+        release {
+            //  签名文件
+            signingConfig signingConfigs.release
+        }
+        debug {
+            //  签名文件
+            signingConfig signingConfigs.debug
+        }
+    }
 }
 
 dependencies {
