--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,13 @@ android {
             }
         }
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
 }
 
 dependencies {
@@ -56,11 +63,11 @@ dependencies {
     //  多dex配置
     implementation 'com.android.support:multidex:1.0.3'
     //  使用热更新的bugly库
-    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.6'
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.4.2'
     // 指定tinker依赖版本（注：应用升级1.3.5版本起，不再内置tinker）
     implementation 'com.tencent.tinker:tinker-android-lib:1.9.9'
     //  其中latest.release指代最新版本号，也可以指定明确的版
-    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.3'
 
     //  测试库
     testImplementation deps.test.junit
