--- a/lib-base/build.gradle
+++ b/lib-base/build.gradle
@@ -22,13 +22,17 @@ dependencies {
     api deps.kotlin.stdlib_jdk7
     //  Activity组件库
     api deps.support.app_compat
-
     //  ConstraintLayout控件
-    api 'androidx.constraintlayout:constraintlayout:2.0.1'
+    api deps.support.constraint_layout
     //  RecyclerView控件
     api deps.support.recyclerview
+
     //  json解析框架
     api 'com.google.code.gson:gson:2.8.6'
+
+    api 'androidx.core:core-ktx:1.3.1'
+    api 'androidx.activity:activity-ktx:1.2.0-alpha08'
+    api 'androidx.fragment:fragment-ktx:1.3.0-alpha08'
 
     //  组件化框架的库
     api "io.github.prototypez:app-joint-core:1.7"
