--- a/app/tinker-support.gradle
+++ b/app/tinker-support.gradle
@@ -5,7 +5,7 @@ def bakPath = file("${buildDir}/bakApk/")
 /**
  * 此处填写每次构建生成的基准包目录
  */
-def baseApkDir = "app-0927-19-27-19"
+def baseApkDir = "app-1105-15-47-23"
 
 /**
  * 对于插件各参数的详细解析请参考
@@ -40,7 +40,7 @@ tinkerSupport {
 
     autoGenerateTinkerId = false
     // 构建基准包和补丁包都要指定不同的tinkerId，并且必须保证唯一性
-    tinkerId = "base-1.1.0.0"
+    tinkerId = "patch-1.3.0.2"
 
     // 构建多渠道补丁时使用
     // buildAllFlavorsDir = "${bakPath}/${baseApkDir}"
